# c-streams

./: CMakeLists.txt  main.cpp
src/streams/: defines.hpp  filter.hpp  iter_base.hpp  iterable.hpp  map.hpp  streams.hpp
